[package]
name = "aoc2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
itertools = "0.12.0"
hopcroft-karp = "0.2.1"

[[bin]]
name = "01"
path = "01/01.rs"

[[bin]]
name = "02"
path = "02/02.rs"

[[bin]]
name = "03"
path = "03/03.rs"

[[bin]]
name = "04"
path = "04/04.rs"

[[bin]]
name = "05"
path = "05/05.rs"

[[bin]]
name = "06"
path = "06/06.rs"

[[bin]]
name = "07"
path = "07/07.rs"

[[bin]]
name = "08"
path = "08/08.rs"

[[bin]]
name = "09"
path = "09/09.rs"

[[bin]]
name = "10"
path = "10/10.rs"

[[bin]]
name = "11"
path = "11/11.rs"

[[bin]]
name = "12"
path = "12/12.rs"

[[bin]]
name = "13"
path = "13/13.rs"

[[bin]]
name = "14"
path = "14/14.rs"

[[bin]]
name = "15"
path = "15/15.rs"

[[bin]]
name = "16"
path = "16/16.rs"

[[bin]]
name = "17"
path = "17/17.rs"

[[bin]]
name = "18"
path = "18/18.rs"

[[bin]]
name = "19"
path = "19/19.rs"

[[bin]]
name = "20"
path = "20/20.rs"

[[bin]]
name = "21"
path = "21/21.rs"

[[bin]]
name = "22"
path = "22/22.rs"

[[bin]]
name = "23"
path = "23/23.rs"

[[bin]]
name = "24"
path = "24/24.rs"

[[bin]]
name = "25"
path = "25/25.rs"
